--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-session-sequelize": "^7.1.6",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "eslint": "^8.40.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
